experiment type strings are correctly aligned on mobile view (#3803)

--- a/frontend/src/app/containers/ExperimentPage/index.scss
+++ b/frontend/src/app/containers/ExperimentPage/index.scss
@@ -533,5 +533,9 @@
     header{
       align-items: center;
     }
+
+    .experiment-platform {
+      justify-content : center;
+    }
   }
 }
